--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -19,6 +19,16 @@
         android:title="@string/menu_about"/>
 
     <item
+        android:id="@+id/webView"
+        app:showAsAction="never"
+        android:title="@string/menu_share"/>
+
+    <item
+        android:id="@+id/vpn"
+        app:showAsAction="never"
+        android:title="@string/menu_vpn"/>
+
+    <item
         android:id="@+id/action_exit"
         app:showAsAction="never"
         android:title="@string/menu_exit"/>
