--- a/app/src/main/res/layout/activity_usershare.xml
+++ b/app/src/main/res/layout/activity_usershare.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserShareActivity">
+    tools:context=".MainActivity">
 
     <!-- Place Web-view on the Screen -->
     <WebView
@@ -13,3 +12,4 @@
         android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
