--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -59,8 +59,7 @@
                 android:elevation="30dp"
                 app:strokeColor="@null"
                 android:theme="@style/CurvedImageViewStyle"
-                android:src="@drawable/ic_meshenger_icon"
-                android:background="@drawable/meshenger_icon_background"/>
+                android:src="@drawable/logo" />
 
             <TextView
                 android:layout_width="wrap_content"
