--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/meshenger_logo"/>
+                android:src="@drawable/logo"/>
 
         </androidx.appcompat.widget.Toolbar>
 
