--- a/app/src/main/res/layout/activity_qrshow.xml
+++ b/app/src/main/res/layout/activity_qrshow.xml
@@ -47,6 +47,18 @@
         app:srcCompat="@drawable/ic_baseline_share_24" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabCopy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/contact_name_tv"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="91dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginBottom="@dimen/padding_10"
+        app:srcCompat="@drawable/ic_copy_white" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabPresenter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
